<resources>
    <string name="app_name">neWork</string>

    <string name="events_nav_menu_bottom_bar">Events</string>
    <string name="main_nav_menu_bottom_bar">Main</string>
    <string name="my_profile_nav_menu_bottom_bar">My profile</string>
    <string name="user_icon_content_description">User icon</string>
    <string name="delete_post_item_menu">Delete</string>
    <string name="save_button_description">Save</string>
    <string name="save_button_title">Save</string>
    <string name="hint_create_post_editText">Create a new post</string>
    <string name="action_signIn_auth_appbar_menu">Sign In</string>
    <string name="et_login_hint_loginFragment">Login</string>
    <string name="et_password_hint_loginFragment">Password</string>
    <string name="bt_signIn_login_fragment">Sign in</string>
    <string name="tv_create_account_request_login_fragment">Don\'t have an account yet?</string>
    <string name="tv_create_account_span_action_login_fragment">Create one!</string>
    <!-- Strings related to login -->
    <string name="et_registration_hint_registrationFragment">User Name</string>
    <string name="et_confirm_password_hint_registrationFragment">Confirm password</string>
    <string name="tv_signIn_span_action_registration_fragment">Sign in!</string>
    <string name="tv_is_signed_in_request_registration_fragment">Already have an existing account?</string>
    <string name="bt_signUp_registration_fragment">Sign up</string>
    <string name="passwords_not_match_error_registration">Passwords should be identical!</string>
    <string name="empty_field_error_registration_fragment">\The field should be filled!</string>
    <string name="invalid_email_registration">Please provide a valid email address</string>
    <string name="password_too_short_error_registration_fragment">Password must be at least 6 characters long</string>
    <string name="edit_post_item_menu">Edit</string>
    <string name="change_post_fragment_title">Change post</string>
    <string name="hint_create_event_editText">Create a new event</string>
    <string name="change_event_fragment_title">Edit event</string>
    <string name="iv_content_icon_description">Content icon</string>
    <string name="iv_date_picker_icon_description">Date picker icon</string>
    <string name="online_event_type_button">Online</string>
    <string name="offline_event_type_button">Offline</string>
    <string name="tv_pick_event_date">Pick date…</string>
    <string name="iv_event_type_icon_description">Event type icon</string>
    <string name="iv_date_icon_description">Event date icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="retry_button_tV">Retry</string>
    <string name="job_employment_term">%1$s - %2$s</string>
    <string name="create_job_dialog_company_name">Company name</string>
    <string name="create_job_dialog_position">Position</string>
    <string name="create_job_dialog_start_period">From…</string>
    <string name="create_job_dialog_end_period">To…</string>
    <string name="create_job_dialog_company_link">Company link</string>
    <string name="create_job_dialog_bt_cancel">Cancel</string>
    <string name="create_job_dialog_bt_confirm">Confirm</string>
    <string name="job_delete_action">Delete</string>
    <string name="job_options_cancel_deletion">Cancel</string>
    <string name="common_error_message">Something went wrong, please try again later.</string>
    <string name="action_sign_out_menu_item">Sign out</string>
    <string name="login_fragment_login_later">Do it later</string>
    <string name="image_attachment_content_description">Image attachment</string>
    <string name="error_blank_post_content">Post content cannot be blank!</string>
    <string name="empty_field_error">The field cannot be empty!</string>
    <string name="add_event_fab">Add event</string>
    <string name="add_post_fab">Add post</string>
    <string name="empty_post_list_icon_content_desctription">Empty post list icon</string>
    <string name="empty_users_list_icon_content_description">Empty users list icon</string>
    <string name="tv_empty_post_list">No posts yet :(</string>
    <string name="tv_empty_event_list">No events yet :(</string>
    <string name="ok_action">OK</string>
    <string name="no_media_loaded_error">Error with loading media. Please, try again!</string>
    <string name="permissions_needed_title">App needs permission(s)</string>
    <string name="grant_following_permissions_dialog_message">To proceed grant the app following permissions:</string>
    <string name="grant_storage_permissions_dialog_message">To proceed grant the app permission to access device storage</string>
    <string name="discard_changes_dialog_title">Discard changes?</string>
    <string name="discard_changes_dialog_body">Do you want to leave? All unsaved changes will be lost</string>
    <string name="action_leave_dialog_fragment">Leave</string>
    <string name="action_cancel_dialog_fragment">Cancel</string>
    <string name="google_play_unavailable">Google Api Is Unavailable</string>
    <string name="button_add_a_job">Add a job</string>
    <string name="users_nav_menu_bottom_bar">Users</string>
    <string name="is_you_user_card_view_text">You</string>
    <string name="tv_empty_users_list">No users yet :(</string>
    <string name="tv_see_all_participants">See all</string>
    <string name="event_participants_fragment_tite">Participants</string>
    <string name="sign_in_fragment_title">Sign In</string>
    <string name="sign_up_fragment_title">Sign Up</string>
    <string name="users_fragment_title">Users</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="post_fragment_title">Posts</string>
    <string name="events_fragment_title">Events</string>
    <string name="create_post_fragment_title">Create post</string>
    <string name="cereate_event_fragment_title">Create event</string>
    <string name="event_type_offline">Offline event</string>
    <string name="event_type_online">Online event</string>
    <string name="error_unauthorized_to_like">Only authorized users can leave likes!</string>
    <string name="error_unauthorized_to_participate">Only authorized users can participate!</string>
    <string name="_no_company_create_job_error">Provide a company name!</string>
    <string name="_no_position_create_job_error">Type in your position!</string>
    <string name="_no_start_date_create_job_error">Provide start date!</string>
    <string name="job_blank_end_date_text">current time</string>
    <string name="app_error_api_message">Server error. Please, try again.</string>
    <string name="app_error_auth_message">Failed to sign in. Ensure your login and password are correct and try again</string>
    <string name="app_error_db_message">Internal database error, try again.</string>
    <string name="app_error_network_message">Connection error. Please try again later.</string>
    <string name="app_error_registration_message">Failed to sign up. Please try again!</string>
    <string name="app_error_undefined_message">Unknown error, please try again later.</string>
</resources>