<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context=".ui.CreateEventFragment">

        <ImageView
            android:id="@+id/iV_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/iv_content_icon_description"
            android:src="@drawable/ic_content_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/eT_post_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints="no"
            android:background="@android:color/transparent"
            android:hint="@string/hint_create_event_editText"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/iV_content"
            app:layout_constraintTop_toTopOf="@id/iV_content" />

        <View
            android:id="@+id/group_pick_event_date"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@id/iV_pick_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iV_pick_date" />

        <ImageView
            android:id="@+id/iV_pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/iv_date_picker_icon_description"
            android:src="@drawable/ic_calendar_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eT_post_content" />

        <TextView
            android:id="@+id/tV_event_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/tv_pick_event_date"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/iV_pick_date"
            app:layout_constraintStart_toEndOf="@id/iV_pick_date"
            app:layout_constraintTop_toTopOf="@id/iV_pick_date" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/button_event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tV_event_date_time"
            app:singleSelection="true">

            <Button
                android:id="@+id/button_type_online"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online_event_type_button" />

            <Button
                android:id="@+id/button_type_offline"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline_event_type_button" />


        </com.google.android.material.button.MaterialButtonToggleGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>