<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/common_spacing"
    android:paddingVertical="4dp">

    <ImageView
        android:id="@+id/iV_avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/user_icon_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tV_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tV_published"
        app:layout_constraintStart_toEndOf="@id/iV_avatar"
        app:layout_constraintTop_toTopOf="@id/iV_avatar"
        tools:text="Me" />

    <TextView
        android:id="@+id/tV_published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/material_on_surface_emphasis_medium"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/iV_avatar"
        app:layout_constraintStart_toEndOf="@id/iV_avatar"
        app:layout_constraintTop_toBottomOf="@id/tV_userName"
        tools:text="12/23/07 at 15:00" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_event_options"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iV_avatar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="iV_avatar,tV_published,bt_event_options" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:lineSpacingMultiplier="1.5"
        android:paddingTop="@dimen/common_spacing"
        android:paddingBottom="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:text="Content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_content" />

    <ImageView
        android:id="@+id/iV_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:contentDescription="@string/iv_date_icon_description"
        android:src="@drawable/ic_calendar_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer" />

    <TextView
        android:id="@+id/tv_event_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iV_date"
        app:layout_constraintTop_toTopOf="@id/iV_date"
        app:layout_constraintBottom_toBottomOf="@id/iV_date"
        tools:text="22/11/22, 13:00" />

    <ImageView
        android:id="@+id/iV_event_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_event_type_icon_description"
        tools:src="@drawable/ic_event_type_online"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/iV_date" />

    <TextView
        android:id="@+id/tv_event_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iV_event_type"
        app:layout_constraintTop_toTopOf="@id/iV_event_type"
        app:layout_constraintBottom_toBottomOf="@id/iV_event_type"
        tools:text="online" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_like"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:icon="@drawable/ic_like_24_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iV_event_type"
        tools:checked="true"
        tools:text="23" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_participate"
        style="@style/Widget.AppTheme.EventParticipateCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:icon="@drawable/ic_event_participation_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bt_like"
        app:layout_constraintBottom_toBottomOf="@id/bt_like"
        tools:checked="true"
        tools:text="23" />
</androidx.constraintlayout.widget.ConstraintLayout>